Ajout d'automatisation et utilisation par défaut de Java 11.